--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ dependencies = [
     "fastapi>=0.116.1",
     "openai>=1.98.0",
     "pinecone>=7.3.0",
-    "pymongo[srv]>=4.13.2",
     "python-dotenv>=1.1.1",
     "slowapi>=0.1.9",
     "uvicorn>=0.35.0",
-    "requests>=2.0.0"
+    "requests>=2.0.0",
+    "pymongo>=4.13.2",
 ]
 
 [build-system]
