--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "reca11-memory"
+name = "recall-core"
 version = "0.1.0"
 description = "Memory layer and SDK for LLMs"
 readme = "README.md"
@@ -14,11 +14,13 @@ dependencies = [
     "uvicorn>=0.35.0",
     "requests>=2.0.0",
     "pymongo>=4.13.2",
+    "build>=1.3.0",
+    "twine>=6.1.0",
 ]
 
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-py-modules = ["reca11"]
+[tool.setuptools.packages.find]
+where = ["."]
