--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "recall-core"
+name = "recall_core"
 version = "0.1.1"
 description = "Memory layer and SDK for LLMs"
 readme = "README.md"
