--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "reca11_core"
+name = "reca11-core"
 version = "0.1.1"
 description = "Memory layer and SDK for LLMs"
 readme = "README.md"
@@ -23,4 +23,4 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["reca11-core"]
