--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,4 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["reca11-core"]
+where = ["."]
