--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,5 @@ dependencies = [
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools.packages.find]
-where = ["."]
+[tool.setuptools]
+py-modules = ["reca11"]
