--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.1.1"
 description = "Memory layer and SDK for LLMs"
 readme = "README.md"
 requires-python = ">=3.9"
+authors = [
+    {name = "Shashi Verma", email = "shashi.shekhar.s.verma@vanderbilt.edu"}
+]
+
 
 dependencies = [
     "fastapi>=0.116.1",
